[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "research-agent-ai"
version = "0.1.0"
description = "AI-powered deep research agent: web search, source verification, and cited report generation."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["anthropic", "claude", "research", "ai", "agent"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "anthropic>=0.40.0",
    "click>=8.1",
    "rich>=13.0",
    "httpx>=0.27",
]

[project.scripts]
research = "research_agent.cli:main"

[project.urls]
Repository = "https://github.com/example/research-agent-ai"

[tool.hatch.build.targets.wheel]
packages = ["research_agent"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "BLE", "B"]
